2007-12-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/TextTitle.java
    (arrange): Implement additional options,
    (arrangeNN): New method,
    (arrangeFN): Likewise,
    (arrangeRN): Likewise.

2007-12-18  David Gilbert  <david.gilbert@object-refinery.com>

    Committing for Sergei Ivanov:
    * source/org/jfree/data/Range.java
    (intersects(Range)): New method,
    (expand): Handle special case for negative margins,
    (shift): Added argument check,
    (scale): New method,
    * tests/org/jfree/data/junit/RangeTests.java
    (testConstructor): New test,
    (testHashCode): Likewise,
    (testExpand): Additional checks,
    (testShift): New test,
    (testScale): Likewise.    

2007-12-18  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/IntervalMarker.java
    (IntervalMarker(double, double, Paint)): New constructor.

2007-12-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/HashUtilities.java
	(hashCode(int, BooleanList)): New method,
	(hashCode(int, PaintList)): Likewise,
	(hashCode(int, StrokeList)): Likewise.

2007-12-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/entity/ChartEntity.java
	(getImageMapAreaTag): Don't escape tooltips and urls, delegate that to 
	the tag generators,
	* source/org/jfree/chart/imagemap/StandardURLTagFragmentGenerator.java
	(generateURLFragment): Encode the url text,
	* tests/org/jfree/chart/imagemap/junit/ImageMapPackageTests.java: New file,
	* tests/org/jfree/chart/imagemap/junit/StandardToolTipTagFragmentGeneratorTests.java: 
	Likewise,
	* tests/org/jfree/chart/imagemap/junit/StandardURLTagFragmentGeneratorTests.java: 
	Likewise.

2007-12-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/JFreeChart.java
	(setTitle): Handle listener registration,
	* tests/org/jfree/chart/junit/JFreeChartTests.java
	(testTitleChangeEvents): New test method.
